--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="/css/register.css">
+   <link rel="icon" type="image/x-icon" href="/favicon.png">
 </head>
 
 <body>
