--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,7 +6,7 @@
     <title>Servizo - Field Service Management System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="icon" type="image/x-icon" href="/favicon.ico">
+      <link rel="icon" type="image/x-icon" href="/favicon.png">
 
     
     <style>
